# emokit

c/: CMakeLists.txt
c/examples/epoc_svr/: CMakeLists.txt  Makefile  cmake_install.cmake  epoc_svr.c  epocd.c
c/include/: libepoc.h
